<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/project2"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="246dp"
        android:layout_height="36dp"
        android:layout_marginStart="171dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="156dp"
        android:minHeight="48dp"
        android:text="@string/textView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextViewEdits,TextSizeCheck" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="148dp"
        android:layout_height="77dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/pink"
        android:text="@string/startButton"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="330dp"
        android:layout_height="349dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/vlbfxvx9"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="246dp"
        android:layout_height="44dp"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="83dp"
        android:text="@string/textView2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>